--- a/Front End/app/src/main/AndroidManifest.xml
+++ b/Front End/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         tools:targetApi="31" >
         <activity
             android:name=".MainActivity1"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.MaterialComponents.NoActionBar"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
