--- a/Front End/app/src/main/AndroidManifest.xml
+++ b/Front End/app/src/main/AndroidManifest.xml
@@ -15,10 +15,12 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity5"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.MaterialComponents.NoActionBar"/>
         <activity
             android:name=".MainActivity4"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.MaterialComponents.NoActionBar"/>
         <activity
             android:name=".MainActivity3"
             android:exported="false"
